# bassline-junkie-interface

./: .cproject  .doxyfile  .doxyfile-mcss  .gitignore  .project  CMakeLists.txt  Doxyfile-mcss  Makefile  PCA9685.cpp  PCA9685.h  README.md  STM32_USBDevice_MIDI Default.launch  USBDevice.lib  bassline_junkie-interface Default.launch  build.sh  build_doxy.sh  main.cpp  mbed.bld  mbed_config.h  nucleo-f411re Default.launch
USBDevice/: CMakeLists.txt  Findmbed.cmake  build.sh
USBDevice/.hg/: dirstate  hgrc
USBDevice/.hg/cache/: branchheads
USBDevice/.hg/store/: 00changelog.i  00manifest.i  undo
USBDevice/.hg/store/data/_u_s_b_audio/: _u_s_b_audio.cpp.i  _u_s_b_audio.h.i
USBDevice/.hg/store/data/_u_s_b_device/: _u_s_b_endpoints.h.i  _u_s_b_endpoints___k_l25_z.h.i  _u_s_b_endpoints___m453.h.i  _u_s_b_endpoints___n_u_c472.h.i  _u_s_b_endpoints___s_t_m32.h.i  _u_s_b_h_a_l.h.i  _u_s_b_h_a_l___k_l25_z.cpp.i  _u_s_b_h_a_l___m453.cpp.i  _u_s_b_h_a_l___maxim.cpp.i  _u_s_b_h_a_l___n_u_c472.cpp.i  _u_s_b_h_a_l___s_t_m32_f4.cpp.i
USBDevice/.hg/store/data/_u_s_b_device/_t_a_r_g_e_t___s_t_m/: _u_s_b_h_a_l___s_t_m32.cpp.i  _u_s_b_h_a_l___s_t_m__144__64pins.h.i
USBDevice/.hg/store/data/_u_s_b_device/_t_a_r_g_e_t___silicon___labs/inc/: em__usb.h.i
USBDevice/.hg/store/data/_u_s_b_h_i_d/: _u_s_b_h_i_d.cpp.i  _u_s_b_h_i_d___types.h.i  _u_s_b_keyboard.cpp.i  _u_s_b_keyboard.h.i  _u_s_b_mouse.cpp.i
USBDevice/.hg/store/data/_u_s_b_serial/: _u_s_b_c_d_c.cpp.i  _u_s_b_c_d_c.h.i  _u_s_b_serial.cpp.i  _u_s_b_serial.h.i
USBDevice/.hg/store/data/targets/_t_a_r_g_e_t___freescale/: _u_s_b_endpoints___k_l25_z.h.i  _u_s_b_h_a_l___k_l25_z.cpp.i
USBDevice/.hg/store/data/targets/_t_a_r_g_e_t___maxim/: _u_s_b_endpoints___maxim.h.i  _u_s_b_h_a_l___maxim.cpp.i
USBDevice/.hg/store/data/targets/_t_a_r_g_e_t___n_u_v_o_t_o_n/_t_a_r_g_e_t___m451/: _u_s_b_endpoints___m453.h.i  _u_s_b_h_a_l___m453.cpp.i
USBDevice/.hg/store/data/targets/_t_a_r_g_e_t___n_u_v_o_t_o_n/_t_a_r_g_e_t___n_u_c472/: _u_s_b_endpoints___n_u_c472.h.i  _u_s_b_h_a_l___n_u_c472.cpp.i
USBDevice/.hg/store/data/targets/_t_a_r_g_e_t___n_x_p/: _u_s_b_endpoints___l_p_c11_u.h.i  _u_s_b_endpoints___l_p_c17___l_p_c23.h.i  _u_s_b_h_a_l___l_p_c11_u.cpp.i  _u_s_b_h_a_l___l_p_c17.cpp.i  _u_s_b_h_a_l___l_p_c40.cpp.i
USBDevice/.hg/store/data/targets/_t_a_r_g_e_t___r_e_n_e_s_a_s/: _u_s_b_endpoints___r_z___a1_h.h.i  _u_s_b_h_a_l___r_z___a1_h.cpp.i
USBDevice/.hg/store/data/targets/_t_a_r_g_e_t___s_t_m/: _u_s_b_endpoints___s_t_m32.h.i  _u_s_b_endpoints___s_t_m32_f4.h.i  _u_s_b_h_a_l___s_t_m32.cpp.i  _u_s_b_h_a_l___s_t_m32_f4.cpp.i  _u_s_b_h_a_l___s_t_m__144__64pins.h.i  _u_s_b_regs___s_t_m32.h.i
USBDevice/.hg/store/data/targets/_t_a_r_g_e_t___silicon___labs/: _u_s_b_endpoints___e_f_m32.h.i  _u_s_b_h_a_l___e_f_m32.cpp.i
USBDevice/.hg/store/data/targets/_t_a_r_g_e_t___silicon___labs/inc/: em__usb.h.i  em__usbd.h.i  (+4 more)
src/: ADSR.h  ADSRCTL.cpp  ADSRCTL.h  Button.cpp  Button.h  CMakeLists.txt  Display.cpp  Display.h  EEPROM.h  ENC8.cpp  ENC8.h  Enc.cpp  Enc.h  Knob.cpp  Knob.h  MIDI.cpp  MIDI.h  MOD.h  Mux.cpp  Mux.h  OSC.h  OSCCTL.cpp  OSCCTL.h  PCA9685.cpp  PCA9685.h  Preset.h  Pwm.cpp  Pwm.h  Synth.cpp  Synth.h  UI_BLOCK.h  logger.h  main.cpp  main_tst.cpp_  ui_config.h  utils.h
src/blocks/: ADSR.h  FLT.h  LED_DISP.h  LFO.h  MOD.h  OSC.h  PRESET.h  UI_BLOCK.h  VOL.h
(+91 files in other folders)
